--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mars Weather App</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
     <script src="scripts/index.js" defer></script>
 </head>
 <body>
@@ -43,7 +43,7 @@
             </h2>
 
             <p class="reading">
-                76km/h
+                76kph
             </p>
 
             <div class="wind__direction">
